--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+  /* background: radial-gradient(ellipse at center top, #90ee90 90%, #fefefe 100%); */
+  background-color: #1a1c1f;
+  color: #fefefe; 
 }
 
 #root {
@@ -20,6 +22,7 @@ h1 {
   font-size: 5rem;
   font-weight: 700;
   margin: 0;
+  font-family: 'Dancing Script', cursive;
 }
 
 h2 {
@@ -38,6 +41,7 @@ h2 {
 
 .timer-item {
   margin: 0 1rem;
+  font-size: 1.5rem;
 }
 
 p {
