--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,24 @@ p {
   font-weight: 400;
   margin: 0;
 }
+
+@media screen and (max-width: 480px) {
+  h1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  #timer-container {
+    flex-direction: column;
+    margin: 5vh 0;
+  }
+  .timer-item {
+    font-size: 1rem;
+    margin: 1rem 0;
+  }
+}
